--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -1021,3 +1021,50 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 那么 只需要Hook掉 这个`Element[] dexElements`,利用插件信息生成一个`Element` 并添加到这个数组.
 
+
+## 8.6 Hook具体流程分析
+
+### 8.6.1 获取到`ActivityThread`对象
+
+		Class activityThread_class = Class.forName("android.app.ActivityThread");
+		Field sCurrentActivityThread_field = activityThread_class.getDeclaredField("sCurrentActivityThread");
+		sCurrentActivityThread_field.setAccessible(true);
+		Object sCurrentActivityThread = sCurrentActivityThread_field.get(null);
+
+### 8.6.2 获取`mPackages`
+
+ 获取到`ActivityThread`的`ArrayMap<String, WeakReference<LoadedApk>> mPackages`,需要拿到这个集合中对应当前APP的`LoadedApk`
+
+		//获取到ArrayMap
+		Field mPackages_field = activityThread_class.getDeclaredField("mPackages");
+		mPackages_field.setAccessible(true);
+		ArrayMap<String, Object> mPackages = (ArrayMap<String, Object>) mPackages_field.get(sCurrentActivityThread);
+		//获取到了LoadedApk
+		Object loadedApk = ((WeakReference) mPackages.get(context.getPackageName())).get();
+
+### 8.6.3 获取`P`
+ 拿到`LoadedApk`中的`PathClassLoader`,这个是系统类加载器.同一个包对应的类加载器都是同一个.
+
+            Class classLoader_class = Class.forName("android.app.LoadedApk");
+            Field mClassLoader_field = classLoader_class.getDeclaredField("mClassLoader");
+            mClassLoader_field.setAccessible(true);
+            //获取到 LoadedApk 的 PathClassLoader
+            ClassLoader classLoader = (ClassLoader) mClassLoader_field.get(loadedApk);
+
+4. 拿到`PathClassLoader`中的`DexPathList`,前者主要依靠后者去实现类加载.
+
+		Class baseDexClassLoader_class = Class.forName("dalvik.system.BaseDexClassLoader");
+		Field pathList_field = baseDexClassLoader_class.getDeclaredField("pathList");
+		pathList_field.setAccessible(true);
+		Object pathList = pathList_field.get(classLoader);
+
+	- **这里需要注意:`pathList`字段是存在于`BaseDexClassLoader`,所以反射需要使用的是`BaseDexClassLoader`的字节码**
+
+5. 拿到`DexPathList`中的`Element[]`,`Element`就是代表的含有`.dex`文件的信息
+
+		// Element[] of DexPathList
+		Class dexPathList_class = Class.forName("dalvik.system.DexPathList");
+		Field dexElements_field = dexPathList_class.getDeclaredField("dexElements");
+		dexElements_field.setAccessible(true);
+		//获取到 DexPathList 的 Elements 数组
+		Object[] old_dexElements = (Object[]) dexElements_field.get(pathList);
