--- a/AOP/插件化/插件加载机制.md
+++ b/AOP/插件化/插件加载机制.md
@@ -864,7 +864,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 系统获取类加载器是通过`LoadedApk`,`LoadedApk`都是通过`ApplicationLoaders.getDefault().getClassLoader()`获取的`ClassLoader`,查看其具体实现 可以发现都是同一个类加载器.**那么只需要将这个类加载器 Hook掉,即对所有的类加载器过程起作用**
 
 
-## 8.4 PathClassLoader 具体如何加载类?
+# 9. PathClassLoader 具体如何加载类?
 
 在获取到`PathClassLoader`之后,会借助`Instrumentation`来加载类,实际上只是调用`PathClassLoader`的`loadClass()`方法
 
@@ -877,7 +877,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 类加载器的源码在`android.jar`之中,其线上源码在[DexClassLoader/PathClassLoader 源码地址](https://android.googlesource.com/platform/libcore/+/master/dalvik/src/main/java/dalvik/system)
 
-### 8.4.1 PathClassLoader 源码
+## 9.1 PathClassLoader 源码
 
 实际上,PathClassLoader仅仅是实现了其构造函数,主要功能的实现在`BaseDexClassLoader`
 
@@ -892,7 +892,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 	    }
 	}
 
-### 8.4.2 loadClass流程
+## 9.2 loadClass流程
 
 **ClassLoader**
 
@@ -1013,7 +1013,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 - 最终是通过 本地方法 加载`.dex`文件中的类
 
-## 8.5 Hook点分析
+## 9.3 Hook点分析
 
 通过7.4.2 的分析, `PathClassLoader.loadClass()`最终会交给`DexPathList.findClass()`,在`DexPathList.findClass()`方法中 有遍历`Element`数组 去加载类(**这个`Element`保存有dex/resource的路径等信息**)
 
@@ -1022,16 +1022,16 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 那么 只需要Hook掉 这个`Element[] dexElements`,利用插件信息生成一个`Element` 并添加到这个数组.
 
 
-## 8.6 Hook具体流程分析
+# 10. Hook具体流程分析
 
-### 8.6.1 获取到`ActivityThread`对象
+## 10.1 获取到`ActivityThread`对象
 
 		Class activityThread_class = Class.forName("android.app.ActivityThread");
 		Field sCurrentActivityThread_field = activityThread_class.getDeclaredField("sCurrentActivityThread");
 		sCurrentActivityThread_field.setAccessible(true);
 		Object sCurrentActivityThread = sCurrentActivityThread_field.get(null);
 
-### 8.6.2 获取`mPackages`
+## 10.2 获取`mPackages`
 
  获取到`ActivityThread`的`ArrayMap<String, WeakReference<LoadedApk>> mPackages`,需要拿到这个集合中对应当前APP的`LoadedApk`
 
@@ -1042,7 +1042,7 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 		//获取到了LoadedApk
 		Object loadedApk = ((WeakReference) mPackages.get(context.getPackageName())).get();
 
-### 8.6.3 获取`P`
+## 10.3 获取`PathClassLoader`
  拿到`LoadedApk`中的`PathClassLoader`,这个是系统类加载器.同一个包对应的类加载器都是同一个.
 
             Class classLoader_class = Class.forName("android.app.LoadedApk");
@@ -1051,7 +1051,8 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
             //获取到 LoadedApk 的 PathClassLoader
             ClassLoader classLoader = (ClassLoader) mClassLoader_field.get(loadedApk);
 
-4. 拿到`PathClassLoader`中的`DexPathList`,前者主要依靠后者去实现类加载.
+## 10.4 获取`DexPathList`
+拿到`PathClassLoader`中的`DexPathList`,前者主要依靠后者去实现类加载.
 
 		Class baseDexClassLoader_class = Class.forName("dalvik.system.BaseDexClassLoader");
 		Field pathList_field = baseDexClassLoader_class.getDeclaredField("pathList");
@@ -1060,7 +1061,9 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 
 	- **这里需要注意:`pathList`字段是存在于`BaseDexClassLoader`,所以反射需要使用的是`BaseDexClassLoader`的字节码**
 
-5. 拿到`DexPathList`中的`Element[]`,`Element`就是代表的含有`.dex`文件的信息
+## 10.5 获取`Element[]`
+
+拿到`DexPathList`中的`Element[]`,`Element`就是代表的含有`.dex`文件的信息
 
 		// Element[] of DexPathList
 		Class dexPathList_class = Class.forName("dalvik.system.DexPathList");
@@ -1068,3 +1071,128 @@ Android系统是一个多任务多用户系统,因此不同的用户使用同一
 		dexElements_field.setAccessible(true);
 		//获取到 DexPathList 的 Elements 数组
 		Object[] old_dexElements = (Object[]) dexElements_field.get(pathList);
+
+## 10.6 生成插件Element
+
+手动生成Element 插件 有俩种方式
+
+1. 直接调用`Element`的构造函数,传入插件的信息等参数 创建出对象
+
+2. 通过`DexPathClassLoader`将插件加载进来,然后通过反射获取到`DexClasLoader`对象中的`Element[]`
+
+
+### 10.6.1 通过构造函数
+
+	//获取`Element[]`数组的 类型的字节码
+	Class<?> element_Class = old_dexElements.getClass().getComponentType();
+	//获取`Element`构造函数
+	Constructor element_constructor =
+                    element_Class.getDeclaredConstructor(File.class,                           boolean.class,                            File.class,                           DexFile.class);
+	element_constructor.setAccessible(true);
+	//构建参数
+	//创建保存opt的地址
+	File optDexFile = getFileStreamPath("debug.dex");
+	Object newElement = element_constructor.newInstance(
+					apkFile,
+					false,
+                    apkFile,
+                    DexFile.loadDex(
+						apkFile.getCanonicalPath(), 
+						optDexFile.getAbsolutePath(),
+						0));
+	
+     Object[] new_dexElements = new Object[]{newElement};
+
+- 创建出来的是`Element`对象
+
+
+### 10.6.2 通过DexPathClassLoader
+
+	DexClassLoader dexClassLoader = new DexClassLoader(
+					apkFile.getAbsolutePath(),
+                    getPluginOptDirPath(),
+                    getPluginLibSearchPath(),
+                    ClassLoader.getSystemClassLoader());
+
+    public String getPluginOptDirPath() {
+        File file = new File(getApplicationContext().getFilesDir().getAbsolutePath() + "/optdir");
+        if (!file.exists()) {
+            file.mkdirs();
+        }
+        return file.getAbsolutePath();
+    }
+
+    public String getPluginLibSearchPath() {
+        File file = new File(getApplicationContext().getFilesDir().getAbsolutePath() + "/lib");
+        if (!file.exists()) {
+            file.mkdirs();
+        }
+        return file.getAbsolutePath();
+    }
+	
+	Object new_pathList = pathList_field.get(dexClassLoader);
+	Object new_dexElements = dexElements_field.get(new_pathList);
+
+- 首先需要创建`DexPathClassLoader`将插件加载到内存,然后通过反射获取到自定义类加载器中的`DexPathList`,最后同样通过反射获取到`DexPathList`中的`Element[]`数组
+
+- **注意:`new_dexElements`是数组类型,可以换成如下形式:**
+
+		Object [] new_dexElements =(Object []) dexElements_field.get(new_pathList);
+
+## 10.7 组合新旧Element
+
+    /**
+     * 数组合并
+     */
+    private static Object combineArray(Object arrayLhs, Object arrayRhs) {
+        Class<?> componentType = arrayLhs.getClass().getComponentType();
+        int i = Array.getLength(arrayLhs);// 得到左数组长度（补丁数组）
+        int j = Array.getLength(arrayRhs);// 得到原dex数组长度
+        int k = i + j;// 得到总数组长度（补丁数组+原dex数组）
+        Object result = Array.newInstance(componentType, k);// 创建一个类型为componentType，长度为k的新数组
+        System.arraycopy(arrayLhs, 0, result, 0, i);
+        System.arraycopy(arrayRhs, 0, result, i, j);
+        return result;
+    }
+
+## 10.8 替换系统类加载
+
+	//获取到组合的 Elements 数组
+	Object dexElements = combineArray(new_dexElements, old_dexElements);
+	//替换掉DexPathList 中的Elements[] 数组
+	dexElements_field.set(pathList, dexElements);
+	//替换掉BaseDexClassLoader中的DexPathList
+	pathList_field.set(classLoader, pathList);
+	//替换掉LoadedApk中的 BaseDexClassLoader
+	mClassLoader_field.set(loadedApk, classLoader);
+	mPackages.put(context.getPackageName(), new WeakReference(loadedApk));
+	//替换掉原先的ArrayMap
+	mPackages_field.set(sCurrentActivityThread, mPackages);
+
+- 注意传入的都是数组类型
+
+
+## 10.9 方案二仍然存在的问题
+
+资源加载上仍然有问题,当加载了一个插件中的Activity时,当插件Activity加载layout时,会使用到不正确的资源id,导致加载错误的布局
+
+**暂时的解决方式是:布局全部通过代码编写 .仍然需要寻求插件系统的资源管理机制**
+
+# 11. 总结
+
+**[方案一]:**手动创建了一个解析了插件信息的`LoadedApk`并放到了`ActivityThread`中的`ArrayMap mPackages`中,同时会在开启插件Activity时 将Intent 中的 pkg-name 信息改成 插件的包名(为了命中`mPackages`中的`LoadedApk`).
+
+- 方案一 采用的多`ClassLoader`架构,即插件和宿主的类加载器是分开的,同时每个插件都有各自的类加载器.
+
+- 多`ClassLoader`可以完成真正的代码热加载,如果插件更新,直接重新创建一个自定义类加载器去加载插件,然后替换掉原来版本即可(这是因为 同一个类 被不同类加载器加载 也算是不同的类)
+
+**[方案二]:**Hook掉了系统类加载器`PathClassLoader`,获取到其`Element[]`数组,然后手动组装了一个代表插件(包含有`.dex`文件即可)信息的`Element`,并入原先的数组 并替换掉`PathClassLoader`中的`Element[]`数组
+
+- 方案二 采用的单`ClassLoader`架构,即插件和宿主的类加载器是共享的,这样可能就会导致插件和宿主存在类冲突,资源冲突等
+
+- 单`ClassLoader`在实现热更新时 可能需要进程重启
+
+
+**选择多`ClassLoader`架构在大多数情况下是明智之举。**
+
+**开源框架中,`DroidPlugin`采用的 方案一,`Small`采用的 方案二**
