--- a/AOP/埋点/埋点介绍.md
+++ b/AOP/埋点/埋点介绍.md
@@ -1,6 +1,296 @@
+# 埋点介绍
+
+[美团点评前端无痕埋点实践](https://tech.meituan.com/mt-mobile-analytics-practice.html)
+
+
+[Android埋点技术分析-20171218](http://unclechen.github.io/2017/12/18/Android%E5%9F%8B%E7%82%B9%E6%8A%80%E6%9C%AF%E5%88%86%E6%9E%90/)
+
+
+[应用埋点方案](https://www.jianshu.com/p/80b3f4d027ba)
+
+[Android AOP之字节码插桩](https://www.jianshu.com/p/c202853059b4)
+
+[Android无埋点数据收集SDK关键技术](https://www.jianshu.com/p/b5ffe845fe2d)
+
+#  简介
+
+在应用的各个事件触发处,调用事件接口(将当前事件的动作发送到服务器用来做分析)
+
+
+开源项目:
+
+[Mixpanel-支持代码埋点,可视化埋点](https://github.com/mixpanel/mixpanel-android)
+
+[Sensorsdata-全部支持](https://github.com/sensorsdata/sa-sdk-android)
+
+**这篇文章不涉及具体的代码逻辑**
+
+# 1. 埋点发展
+
+1. **代码埋点**:在应用的各种事件回调中,手动添加触发数据发送的接口
+
+2. **全埋点**:在应用中所有的事件回调中都添加 数据发送的接口
+
+	这个过程可以是手动的,也可以通过工具自动添加
+
+3. **可视化埋点**:通过可视化工具配置所需要采集的节点
+
+	这个过程基本是自动的,通过Hook一些接口实现(反射)
+
+# 2. 代码埋点(手动埋点)
+
+大部分统计SDK 会将数据收集逻辑 封装并对外提供一个接口直接调用.通常需要传入动作标识,额外数据(可选)等
+
+	mBtnBindAccount.setOnClickListener(new View.OnClickListener() {
+		@Override
+		public void onClick(View v) {
+			HMTAgent.onAction(context,"ACTION_NAME");
+		}
+	});
+
+- 这种方式需要开发者手动去添加 事件接口代码
+
+# 3. 全埋点
+
+全埋点即对所有的控件的事件回调 添加数据采集接口的代码.**由于工作量巨大,通常会由统计SDK实现自动埋点这一功能**
+
+**自动埋点可以分为俩种:**
+
+- **静态Hook:**在代码编译期,通过`AspectJ`等工具实现AOP
+
+- **动态Hook:**在运行期实现AOP,例如`View.onClickListener()`
+
+> AOP为Aspect Oriented Programming的缩写，意为：面向切面编程，**通过预编译方式和运行期动态代理实现程序功能的统一维护的一种技术**。AOP是OOP的延续，是软件开发中的一个热点，也是Spring框架中的一个重要内容，是函数式编程的一种衍生范型。利用AOP可以对业务逻辑的各个部分进行隔离，从而使得业务逻辑各部分之间的耦合度降低，提高程序的可重用性，同时提高了开发的效率
+
+## 3.1 静态Hook
+
+`Sensors Analytics Android SDK `全埋点的实现即通过**静态Hook**实现,其使用的是`AspectJ`框架
+
+- [开源的静态Hook插件2](https://github.com/sensorsdata/sa-sdk-android-plugin2)
+
+- [开源的静态Hook插件1](https://github.com/sensorsdata/sa-sdk-android-plugin)
+
+
+类似的方案还有:
+
+1. Gradle提供的`transform-api+ASM/javaassist`
+
+	[利用transform-api实现插栓](https://github.com/iwantthink/TODO/tree/master/AOP/%E5%88%A9%E7%94%A8transform-api%E5%AE%9E%E7%8E%B0%E6%8F%92%E6%A0%93)
+
+## 3.2 动态Hook
+
+在App运行时,动态的Hook 事件回调
+
+### 3.2.1 动态Hook的基础
+
+Android中,控件都需要继承自`android.view.View`,在`API>=14`中,提供了几个关键方法可以用来实现动态Hook.
+
+首先查看设置控件设置的代码:
+
+	// View.java
+	public void setOnClickListener(@Nullable OnClickListener l) {
+	    if (!isClickable()) {
+	        setClickable(true);
+	    }
+	    getListenerInfo().mOnClickListener = l;
+	}
+	//View.java
+	/**
+	 * 判断这个View是否设置了点击监听器
+	 * Return whether this view has an attached OnClickListener.  Returns
+	 * true if there is a listener, false if there is none.
+	 */
+	public boolean hasOnClickListeners() {
+	    ListenerInfo li = mListenerInfo;
+	    return (li != null && li.mOnClickListener != null);
+	}
+
+- 可以看到,内部其实是把`mListenerInfo`的`mOnClickListener`赋值给`ListenerInfo`进行保存
+
+- `ListenerInfo`是`View`的内部类,其定义了许多成员变量用来保存各种事件信息
+
+		ListenerInfo mListenerInfo;
+
+		// getListenerInfo方法：返回所有的监听器信息mListenerInfo
+		ListenerInfo getListenerInfo() {
+		    if (mListenerInfo != null) {
+		        return mListenerInfo;
+		    }
+		    mListenerInfo = new ListenerInfo();
+		    return mListenerInfo;
+		}
+		// 监听器信息
+		static class ListenerInfo {
+		    ... // 此处省略各种xxxListener
+		    /**
+		     * Listener used to dispatch click events.
+		     * This field should be made private, so it is hidden from the SDK.
+		     * {@hide}
+		     */
+		    public OnClickListener mOnClickListener;
+		    /**
+		     * Listener used to dispatch long click events.
+		     * This field should be made private, so it is hidden from the SDK.
+		     * {@hide}
+		     */
+		    protected OnLongClickListener mOnLongClickListener;
+		    ...
+		}
+
+- `API<14`的`View`源码中,没有专门定义一个类`ListenerInfo`用来保存监听器信息,而是直接保存在`View`的成员变量中
+
+### 3.2.2 动态Hook的实现过程
+
+通过3.2.1 已经知道监听器(设置到控件的事件),会被保存到`ListenerInfo`类中
+
+- **通过创建监听器的代理类,并用代理类替换掉原先的监听器,即可实现动态Hook**
+
+### 3.2.3 如何对所有的View进行动态Hook?
+
+已经知道如何对单个`View`进行动态Hook,那么如何对所有的View?
+
+1. 当Activity创建完成之后,从`Activity`的`DecorView`开始自顶向下深度遍历`ViewTree`，遍历到一个View的时候，对它进行`hookView`操作。这种方式有点暴力，由于这里面遍历`ViewTree`的时候用到了大量反射，性能会有影响。
+
+2. 当Activity创建完成后，在DecorView中添加一个透明的View作为子View，在这个子View的onTouchEvent方法中，根据触摸坐标找到屏幕中包含了这个坐标的View，再对这些View尝试进行hookView操作。
+
+	这种方式比较取巧，首先是拿到了手指按下的位置，根据这个位置来找需要被Hook的View，避免了在遍历ViewTree的同时对View进行反射。具体实现是在遍历ViewTree中的每个View时，判断这个View的坐标是否包含手指按下的坐标，以及View是否Visible，如果满足这两个条件，就把这个View保存到一个ArrayListhitViews。然后再遍历这个ArrayList里面的View，如果一个View#hasOnClickListeners返回true，那么才对他进行hookView操作。
+
+	这种方式来自Github上一个开源项目 ---[AndroidTracker](https://github.com/foolchen/AndroidTracker)
+
+### 3.2.4 动态Hook总结
+
+动态Hook大量使用反射来实现,如果仅针对少量接口做 动态Hook 可能对性能影响不大,但是接口数量一多,还是需要考虑清楚是否需要使用这个方案
+
+动态Hook 使用了Java的代理模式,因为代理类是在源码中就已经编写好了的,所以这里的代理模式实际上是 **Java静态代理**
+
+
+### 3.2.5 参考资料
+
+[Aspect Oriented Programming in Android](https://fernandocejas.com/2014/08/03/aspect-oriented-programming-in-android/)
+
+[Aspect Oriented Programming in Android-翻译](https://www.jianshu.com/p/f90e04bcb326)
+
+[AspectJX-扩展版AspectJ](https://github.com/HujiangTechnology/gradle_plugin_android_aspectjx)
+
+[关于 Spring AOP (AspectJ) 你该知晓的一切](https://blog.csdn.net/javazejian/article/details/56267036)
+
+
+# 4. 可视化埋点
+
+可视化埋点 就是对全埋点的动态Hook方式进行修改,仅在运行时针对特定控件进行埋点.
+
+## 4.1 可视化埋点原理
+
+通常的可视化埋点SDK,大都需要俩个步骤
+
+1. **通过可视化工具配置需要采集的`View`,并下发到App**
+
+	App和后台建立连接,后台显示App的界面,通过选择指定View 并下发到App,来实现 配置采集的View
+
+2. **App解析配置,找到对应的View,并对其进行Hook,添加 采集数据的事件**
+
+	App收到后台下发的配置,根据这份配置查询App中的元素.然后对这个元素进行Hook
+
+
+## 4.2 可视化埋点的难点以及优化
+
+**技术难点:**
+
+- **建立有效的长链接**:只需要是Java实现的WebSocket即可.开源项目[Java-webSocket](https://github.com/TooTallNate/Java-WebSocket),[AndroidAsync](https://github.com/koush/AndroidAsync)
+
+- **如何标识控件元素**:View是在ViewTree上的一个节点,那么可以用**纵向的路径,横向的下标**来标识一个View
+
+	纵向的路径:是指从根View到这个View的父控件的路径上经过的每一个节点
+
+	横向的下标:是指这个View在父控件中的同类元素的下标索引（例如一个LinearLayout中有两个Button，那么第一个Button的下标就是0，第二个Button的下标就是1，这种方式可以抵抗父控件中加入一个非Button类型的元素时对ViewTree的改变，保证仍然可以找到Button，但是无法抵抗父控件中加入同类型的元素）
+
+	实际上如何标识一个View是十分复杂的,有许多的使用场景会对view的标识产生影响.例如,ViewTree的变化,ListView中控件的复用等
+
+	[网易乐得 “无埋点”数据采集实践之路](http://www.infoq.com/cn/presentations/netease-happy-to-no-burial-point-data-collection-practice-road)
+	[Android无埋点数据收集SDK关键技术](http://www.jianshu.com/p/b5ffe845fe2d)
+
+- **如何寻找控件元素**
+
+	反射+标识
+
+## 4.3 参考资料
+
+[Sensors Data](https://github.com/sensorsdata)
+
+[MixPanel](https://github.com/mixpanel)
+
+[网易移动端数据收集和分析博客](https://www.jianshu.com/c/ee326e36f556)
+
 [美团点评前端无痕埋点实践](https://tech.meituan.com/mt-mobile-analytics-practice.html)
 
 
-[Android埋点技术分析](http://unclechen.github.io/2017/12/18/Android%E5%9F%8B%E7%82%B9%E6%8A%80%E6%9C%AF%E5%88%86%E6%9E%90/)
+# 5. 三种方案的总结
 
-[美团点评前端无痕埋点实践](https://tech.meituan.com/mt-mobile-analytics-practice.html)
+## 5.1 代码埋点
+
+**优点:**
+
+1. 使用灵活，精确控制发送时机 
+2. 方便设置自定义业务相关的属性
+
+**缺点:**
+
+1. 埋点成本高，工作量大，必须是技术人员才能完成 
+
+2. 更新成本高，一旦上线很难修改。只能通过热修复或者重新发版 
+
+3. 对业务代码的侵入大
+
+**场景:**
+
+1. 对业务上下文理解要求较高的业务数据，如电商购物这类可能经过多次页面跳转，埋点时还需要带上前面页面中的一些信息
+
+
+## 5.2 全埋点
+
+**优点:**
+
+1. 开发、维护成本低 
+
+2. 可以追溯历史数据 
+
+3. 对业务代码侵入小 
+
+4. 可以收集到一些额外信息，例如界面的热力图
+
+**缺点:**
+
+1. 高额流量和计算成本 
+
+2. 无法灵活收集属性 
+
+3. 动态的Hook方式支持的控件有限、事件类型有限，大量事件监测时反射对App运行性能有影响 
+
+4. 静态的Hook方式需要第三方编译器参与，打包时间增长
+
+**场景:**
+
+上下文相对独立的、通用的数据，如点击热力图，性能监控和日志
+
+
+## 5.3 可视化埋点
+
+**优点:**
+
+1. 开发、维护成本低 
+
+2. 可以按需埋点，灵活性好 
+
+3. 对业务代码侵入小
+
+**缺点:**
+
+1. 界面的结构发生变化时，圈选的待监测元素可能会失效 
+
+2. 支持的控件和事件类型有限 
+
+3. 无法灵活地收集到上下文属性
+
+**场景:**
+
+上下文相对简单，依靠控件可以获得上下文信息，界面结构比较简单固定，如新闻阅读、游戏分享界面
