--- a/AOP/埋点/埋点介绍.md
+++ b/AOP/埋点/埋点介绍.md
@@ -60,7 +60,7 @@
 
 - **动态Hook:**在运行期实现AOP,例如`View.onClickListener()`
 
-> AOP为Aspect Oriented Programming的缩写，意为：面向切面编程，**通过预编译方式和运行期动态代理实现程序功能的统一维护的一种技术**。AOP是OOP的延续，是软件开发中的一个热点，也是Spring框架中的一个重要内容，是函数式编程的一种衍生范型。利用AOP可以对业务逻辑的各个部分进行隔离，从而使得业务逻辑各部分之间的耦合度降低，提高程序的可重用性，同时提高了开发的效率
+> AOP为`Aspect Oriented Programming`的缩写，意为：面向切面编程，**通过预编译方式和运行期动态代理实现程序功能的统一维护的一种技术**。AOP是OOP的延续，是软件开发中的一个热点，也是Spring框架中的一个重要内容，是函数式编程的一种衍生范型。利用AOP可以对业务逻辑的各个部分进行隔离，从而使得业务逻辑各部分之间的耦合度降低，提高程序的可重用性，同时提高了开发的效率
 
 ## 3.1 静态Hook
 
@@ -79,7 +79,7 @@
 
 ## 3.2 动态Hook
 
-在App运行时,动态的Hook 事件回调
+在App运行时,动态的Hook 事件的回调
 
 ### 3.2.1 动态Hook的基础
 
@@ -105,7 +105,7 @@ Android中,控件都需要继承自`android.view.View`,在`API>=14`中,提供了
 	    return (li != null && li.mOnClickListener != null);
 	}
 
-- 可以看到,内部其实是把`mListenerInfo`的`mOnClickListener`赋值给`ListenerInfo`进行保存
+- **内部实现是通过 获取`ListenerInfo`对象,传入的`onClickListener`通过`ListenerInfo`对象的成员变量来保存**
 
 - `ListenerInfo`是`View`的内部类,其定义了许多成员变量用来保存各种事件信息
 
