--- a/AOP/埋点/全埋点实现.md
+++ b/AOP/埋点/全埋点实现.md
@@ -6,3 +6,138 @@
 # 1. 实现Activity的生命周期埋点
 
 
+# 2. 控件埋点
+
+## 2.1  Button 埋点
+
+### 2.1.1 点击事件埋点
+
+设置点击事件可能有俩种形式
+
+1. 创建局部变量指向匿名内部类,然后传入`setOnClickListener()`
+
+		protected void onCreate() {
+	
+	        OnClickListener listener = new OnClickListener() {
+				
+				@Override
+				public void onClick(View v) {
+					
+				}
+			};
+			btn.setOnClickListener(listener);
+	    }
+
+	- 第一种形式对应字节码指令:
+
+		  // access flags 0x4
+		  protected onCreate() : void
+		   L0
+		    LINENUMBER 20 L0
+		    NEW SampleActivity$1
+		    DUP
+		    ALOAD 0: this
+		    INVOKESPECIAL SampleActivity$1.<init> (SampleActivity) : void
+		    ASTORE 1
+		   L1
+		    LINENUMBER 27 L1
+		    ALOAD 0: this
+		    GETFIELD SampleActivity.btn : Button
+		    ALOAD 1: listener
+		    INVOKEVIRTUAL Button.setOnClickListener (View$OnClickListener) : void
+		   L2
+		    LINENUMBER 28 L2
+		    RETURN
+		   L3
+		    LOCALVARIABLE this SampleActivity L0 L3 0
+		    LOCALVARIABLE listener View$OnClickListener L1 L3 1
+		    MAXSTACK = 3
+		    MAXLOCALS = 2
+
+	- 对应的ASM API
+	
+			mv = cw.visitMethod(ACC_PROTECTED, "onCreate", "()V", null, null);
+			mv.visitCode();
+			Label l0 = new Label();
+			mv.visitLabel(l0);
+			mv.visitLineNumber(20, l0);
+			mv.visitTypeInsn(NEW, "com/lance/sample/SampleActivity$1");
+			mv.visitInsn(DUP);
+			mv.visitVarInsn(ALOAD, 0);
+			mv.visitMethodInsn(INVOKESPECIAL, "com/lance/sample/SampleActivity$1", "<init>", "(Lcom/lance/sample/SampleActivity;)V", false);
+			mv.visitVarInsn(ASTORE, 1);
+			Label l1 = new Label();
+			mv.visitLabel(l1);
+			mv.visitLineNumber(27, l1);
+			mv.visitVarInsn(ALOAD, 0);
+			mv.visitFieldInsn(GETFIELD, "com/lance/sample/SampleActivity", "btn", "Landroid/widget/Button;");
+			mv.visitVarInsn(ALOAD, 1);
+			mv.visitMethodInsn(INVOKEVIRTUAL, "android/widget/Button", "setOnClickListener", "(Landroid/view/View$OnClickListener;)V", false);
+			Label l2 = new Label();
+			mv.visitLabel(l2);
+			mv.visitLineNumber(28, l2);
+			mv.visitInsn(RETURN);
+			Label l3 = new Label();
+			mv.visitLabel(l3);
+			mv.visitLocalVariable("this", "Lcom/lance/sample/SampleActivity;", null, l0, l3, 0);
+			mv.visitLocalVariable("listener", "Landroid/view/View$OnClickListener;", null, l1, l3, 1);
+			mv.visitMaxs(3, 2);
+			mv.visitEnd();
+
+2. 直接将匿名内部类传入`setOnClickListener()`
+
+		protected void onCreate() {
+			btn.setOnClickListener(new OnClickListener() {
+	
+				@Override
+				public void onClick(View v) {
+	
+				}
+			});
+		}
+
+	- 第二种形式对应的字节码指令:
+
+			 // access flags 0x4
+			  protected onCreate() : void
+			   L0
+			    LINENUMBER 17 L0
+			    ALOAD 0: this
+			    GETFIELD SampleActivity.btn : Button
+			    NEW SampleActivity$1
+			    DUP
+			    ALOAD 0: this
+			    INVOKESPECIAL SampleActivity$1.<init> (SampleActivity) : void
+			    INVOKEVIRTUAL Button.setOnClickListener (View$OnClickListener) : void
+			   L1
+			    LINENUMBER 24 L1
+			    RETURN
+			   L2
+			    LOCALVARIABLE this SampleActivity L0 L2 0
+			    MAXSTACK = 4
+			    MAXLOCALS = 1
+
+	- 对应的ASM API:
+
+			mv = cw.visitMethod(ACC_PROTECTED, "onCreate", "()V", null, null);
+			mv.visitCode();
+			Label l0 = new Label();
+			mv.visitLabel(l0);
+			mv.visitLineNumber(17, l0);
+			mv.visitVarInsn(ALOAD, 0);
+			mv.visitFieldInsn(GETFIELD, "com/lance/sample/SampleActivity", "btn", "Landroid/widget/Button;");
+			mv.visitTypeInsn(NEW, "com/lance/sample/SampleActivity$1");
+			mv.visitInsn(DUP);
+			mv.visitVarInsn(ALOAD, 0);
+			mv.visitMethodInsn(INVOKESPECIAL, "com/lance/sample/SampleActivity$1", "<init>", "(Lcom/lance/sample/SampleActivity;)V", false);
+			mv.visitMethodInsn(INVOKEVIRTUAL, "android/widget/Button", "setOnClickListener", "(Landroid/view/View$OnClickListener;)V", false);
+			Label l1 = new Label();
+			mv.visitLabel(l1);
+			mv.visitLineNumber(24, l1);
+			mv.visitInsn(RETURN);
+			Label l2 = new Label();
+			mv.visitLabel(l2);
+			mv.visitLocalVariable("this", "Lcom/lance/sample/SampleActivity;", null, l0, l2, 0);
+			mv.visitMaxs(4, 1);
+			mv.visitEnd();
+
