--- a/AOP/埋点/全埋点实现.md
+++ b/AOP/埋点/全埋点实现.md
@@ -57,3 +57,14 @@
 
 
 ### 2.2.4 如何仅针对一种类型的控件 添加事件?
+
+
+### 2.2.5 设置点击事件的代码形式
+
+1. 获取控件实例,调用其`setOnClickListener`
+
+2. 在布局文件中直接对控件的属性进行设置,添加`android:onClick="click"`属性,在其对应的Activity文件中 编写回调
+
+**目前仅支持第一种情况,第二种形式是通过反射直接调用控件所在Activity 的回调**
+
+- 第二种形式的话,可以通过传入方法名 和 方法描述符 . 让插件对这个指定的方法也做AOP操作
