--- a/AOP/埋点/埋点介绍.md
+++ b/AOP/埋点/埋点介绍.md
@@ -12,6 +12,12 @@
 
 [Android无埋点数据收集SDK关键技术](https://www.jianshu.com/p/b5ffe845fe2d)
 
+[无埋点实现监测的真相——革新还是噱头？](http://www.chinawebanalytics.cn/auto-event-tracking-good-bad-ugly/)
+
+[得到Android团队无埋点方案](https://www.jianshu.com/p/7a59e9384bef)
+
+[58无埋点数据采集技术在Android端实践](https://mp.weixin.qq.com/s?__biz=MzU4ODM2MjczNA==&mid=2247483765&idx=1&sn=af344801fa14e49f949e7e762880b503&chksm=fddca7f4caab2ee254a29aca117ea1b59e71174e297fd30b5ae38e2fde67eb8858cdea32e2d2&scene=38#wechat_redirect)
+
 #  简介
 
 在应用的各个事件触发处,调用事件接口(将当前事件的动作发送到服务器用来做分析)
