--- a/mixpanel分析/相关知识点.md
+++ b/mixpanel分析/相关知识点.md
@@ -7,3 +7,66 @@
 [Java并发编程：Callable、Future和FutureTask](https://www.cnblogs.com/dolphin0520/p/3949310.html)
 
 
+# 2. TalkingDate灵动分析
+
+【如何同步手机界面到管理后台】
+在事件管理后台中动态添加事件的基础，是要能够同步应用界面到管理后台中。界面同步方案中有两个关键点：
+1. 通过Canvas来获取屏幕内容：
+	
+		void android.graphics.Canvas.drawBitmap(Bitmap bitmap, float left, float top, Paint paint)；
+2. 获取view属性
+
+	位置相关：x,y,width,height,偏移等，
+	唯一性相关：id，类名等。
+	绘制相关：hidden，alpha等
+	view的属性有很多，哪些属性是应该上传的，哪些属性是可以忽略的，为了动态的调整这些，可以使用反射的机制来实现。具体说，就是在进入UI同步状态时，服务器将一个属性配置单下发到App中，SDK通过对配置的解析，利用反射执行配置中的指定方法获取view的响应属性数据。这也是配置即代码的一种实现。
+	
+	完成以上两项内容，就可以把数据发送至管理后台，并绘制出手机的内容了。
+
+## 2.1 【如何绑定事件至控件】
+Android系统定位一个控件，需要先获取当前Activity的rootview，方法是：
+
+	View rootView = activity.getWindow().getDecorView().getRootView();
+
+然后遍历动态事件列表，用每个动态事件中控件的唯一标示去匹配rootview中的内容，匹配规则：
+viewClassName && id && tag && contentDescription 
+当符合条件时，就给当前的view添加一个AccessibilityDelegate对象
+
+	View.AccessibilityDelegate ret = null;
+	try {
+	    Class<?> klass = v.getClass();
+	    Method m = klass.getMethod("getAccessibilityDelegate");
+	    ret = (View.AccessibilityDelegate) m.invoke(v);
+	} catch (Exception e) {
+	}
+	
+	AccessibilityDelegate newDelegate = new AccessibilityDelegate(ret);
+	view.setAccessibilityDelegate(newDelegate);
+
+## 2.2 【如何监测点击事件】
+通过分析Android系统View类的源代码，发现可利用Android中View类的方法来实现事件触发的：
+	
+	sendAccessibilityEvent(int eventType)
+
+该方法实现如下：
+
+	public void sendAccessibilityEvent(int eventType) {
+	    if (mAccessibilityDelegate != null) {
+	        mAccessibilityDelegate.sendAccessibilityEvent(this, eventType);
+	    } else {
+	        sendAccessibilityEventInternal(eventType);
+	    }
+	}
+
+即只要设置了代理就可以对具备Accessibility能力的view实现点击事件的响应。
+View.AccessibilityDelegate具体说明请参考Android的开发者文档。
+
+## 2.3【界面主线程占用是否有影响】
+界面的监测操作是要放在界面主线程中，开始我们担心这样会不会对应用本身的界面交互产生影响？经过实际测试，这样实现是完全没有问题的，应用不会受任何影响。
+另外，事件的侦测是实时的循环监测，这样自定义的事件越多，必然会有占用时间，不过代价很小（毫秒级），实测中也没有发现对应用交互有可感知的影响。
+
+## 2.4【如何应对界面动态布局】
+为了应对页面的动态布局，我们需要在单一线程中实现事件监测，通过循环操作，使每个事件都对当前页面的所有view进行匹配。经过实测，也没有发现对应用交互有可感知的影响。
+
+## 2.5【如何保持事件触发链】
+处理完事件后，要交还给系统继续处理，不要扔掉，否则会导致应用本身工作异常。
