--- a/mixpanel分析/相关知识点.md
+++ b/mixpanel分析/相关知识点.md
@@ -14,6 +14,7 @@
 1. 通过Canvas来获取屏幕内容：
 	
 		void android.graphics.Canvas.drawBitmap(Bitmap bitmap, float left, float top, Paint paint)；
+
 2. 获取view属性
 
 	位置相关：x,y,width,height,偏移等，
@@ -70,3 +71,7 @@ View.AccessibilityDelegate具体说明请参考Android的开发者文档。
 
 ## 2.5【如何保持事件触发链】
 处理完事件后，要交还给系统继续处理，不要扔掉，否则会导致应用本身工作异常。
+
+
+# 3. SensorManager
+
